# aisp-template

./: README.md  pyproject.toml
tests/: test_template.py
