[tool.poetry]
name = "aisp-template"
version = "0.1.0"
description = ""
authors = ["AISP <kontakt@aisp.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.2"
mypy = "^1.15.0"
black = "^25.1.0"
isort = "^6.0.1"
flake8-pyproject = "^1.2.3"
flake8-bugbear = "^24.12.12"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
